2002-02-16  Nick Clifton  <nickc@cambridge.redhat.com>

	* doc/as.texinfo (Machine Dependencies): Fix typo: MMIX used
	instead of CRIS.

2002-02-15  Chris Demetriou  <cgd@broadcom.com>

        * config/tc-mips.c (md_estimate_size_before_relax): Really
	make sure we treat weak like extern only for ELF.  (Fixes
	patch from 2001-07-25.)

2002-02-15  Ben Elliston  <bje@redhat.com>

	* doc/as.texinfo: Add duplicate directory entry so that "info gas"
	works as expected.

2002-02-15  Hans-Peter Nilsson  <hp@bitrange.com>

	* NEWS: Mention support for MMIX.

2002-02-13  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (mips_need_elf_addend_fixup): Restructure into
	a sequence of indpendent 'if' statements for easier debugging
	and future modification.

2002-02-13  Matt Fredette  <fredette@netbsd.org>

	* config/tc-m68k.c (md_show_usage): No longer display a
	hard-coded "68020" for the default CPU, instead display the
	canonical name of the true, configured default CPU.
	(m68k_elf_final_processing): Mark objects for sub-68020
	CPUs with the new EF_M68000 flag.

2002-02-13  Andreas Schwab  <schwab@suse.de>

	* config/tc-i386.c (tc_i386_fix_adjustable): Don't adjust
	pc-relative relocations to merge sections in 64-bit mode.

2002-02-13  Ben Elliston  <bje@redhat.com>

	* NEWS: Document floating point number handling in gasp.
	* gasp.c: Include <assert.h> and "xregex.h".
	(is_flonum): New function.
	(chew_flownum): Likewise.
	(change_base): Consume flonums from the input, where possible.
	* doc/gasp.texi (Constants): Document floating point numbers.

2002-02-12  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* config/tc-hppa.c (hppa_fix_adjustable): Don't adjust final types
	that implicitly use LR and RR selectors.

2002-02-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mn10300.c (other_registers): Added `epsw'.  Mark `pc'
	and `epsw' as available on AM33 and above only.
	(other_register_name): Add logic to handle machine type encoded in
	reg_number.
